--- a/Nav/index.html
+++ b/Nav/index.html
@@ -24,18 +24,25 @@
                 <div class="nav-menu-reverse">
                     <a href="#" class="brand"><img src="img/logoDustproof_denim.svg"></a>
 
-                    <a href="#" class="nav-menu-button" onclick="openNavMenu()">
-                       <div class="icon-line"></div>
-                      <div class="icon-line"></div>
-                      <div class="icon-line"></div>
+                    <a href="#" class="burger" onclick="openNavMenu()">
+                       <div></div>
+                      <div></div>
+                      <div></div>
                     </a>
                 </div>
                 
-                <div class="nav-menu-container" id="nav-menu-container">
-                    <a href="index.html" class="nav-link active">Nav Link 1</a>
-                    <a href="#" class="nav-link">Nav Link 2</a>
-                    <a href="#" class="nav-link">Nav Link 3</a>
-                </div>
+                <ul class="nav-menu-container" id="nav-menu-container">
+                    <li>
+                        <a href="index.html" class="nav-link active">Nav Link 1</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Nav Link 2</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Nav Link 3</a>
+                    </li>
+                    
+                </ul>
 
             </div>
         </nav>
