--- a/Nav/index.html
+++ b/Nav/index.html
@@ -18,34 +18,34 @@
 
     <body>
 
-        <nav>
-            <div class="container">
-
-                <div class="nav-menu-reverse">
-                    <a href="#" class="brand"><img src="img/logoDustproof_denim.svg"></a>
-
-                    <a href="#" class="burger" onclick="openNavMenu()">
-                       <div></div>
-                      <div></div>
-                      <div></div>
-                    </a>
+        <div class="nav-wrapper">
+            <nav>
+                <div class="container">
+                    <div class="nav-menu-reverse">
+                        <a href="#" class="brand"><img src="img/logoDustproof_denim.svg" height="28px"></a>
+                        <a href="#" class="burger" onclick="openNavMenu()">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </a>
+                    </div>                
+                    <ul class="nav-menu-container" id="nav-menu-container">
+                        <li>
+                            <a href="index.html" class="nav-link active">Nav Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Nav Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link">Nav Link 3</a>
+                        </li>
+                    </ul>
                 </div>
+            </nav>
+            <div class="nav-overlay">
                 
-                <ul class="nav-menu-container" id="nav-menu-container">
-                    <li>
-                        <a href="index.html" class="nav-link active">Nav Link 1</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Nav Link 2</a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link">Nav Link 3</a>
-                    </li>
-                    
-                </ul>
-
             </div>
-        </nav>
+        </div>
 
     </body>
 
